# ec-install

./: .gitignore  Cargo.toml  Makefile  build.rs  eclectica.gemspec  extconf.rb  for-rust.sh  install.sh  package.json  readme.md  setup.py
scripts/: for-rust.sh  install.sh  wget-install.sh
