[package]
name = "eclectica"
license = "MIT"
version = "0.6.0"
authors = ["Oleg Gaidarenko <markelog@gmail.com>"]
repository = "https://github.com/markelog/eclectica"
homepage = "https://github.com/markelog/eclectica#readme"
documentation = "https://github.com/markelog/eclectica#readme"
description = "Cool and eclectic version manager for any language"
build = "build.rs"
include = ["scripts/*.sh", "build.rs", "Cargo.toml", "for-rust.sh", "src/*.rs"]
keywords = [
  "eclectica",
  "version",
  "manager",
  "binary",
  "environment"
]

[[bin]]
name = "ec"

[[bin]]
name = "ec-proxy"
